
[tool.poetry]
name = "morse"
version = "1.0.0"
description = "Create audio file from morse sign."
authors = ["JoonHo Jeon <kueckhoou@gmail.com>"]
readme = "README.md"
packages = []


[tool.poetry.urls]
Homepage = "https://github.com/youlseol"
Documentation = "https://github.com/youlseol/morse/README.md"
Repository = "https://github.com/youlseol/morse"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
pydub = "^0.25.1"

[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-vcr = "^1.0.2"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
